# YOLO_transfer_learning

./: .gitignore  README.md  pyproject.toml
yolo_transfer_learning/: __init__.py  custom_yolov4_utils.py  marmot_data_utils.py
