[tool.poetry]
name = "yolo_transfer_learning"
version = "0.1.0"
description = "A pacakge to handle yolo transfer learning"
authors = ["mingzhi_yu <mingzhi2@alumni.cmu.edu>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
